Fix issue with triangle animation jumping

--- a/styles.css
+++ b/styles.css
@@ -360,7 +360,7 @@ Triangle Card
 
 @keyframes spin-1 {
     100%{
-        transform: rotate(90deg);
+        transform: rotate(210deg);
     }
 }
 
@@ -370,7 +370,7 @@ Triangle Card
 
 @keyframes spin-2 {
     100%{
-        transform: rotate(60deg);
+        transform: rotate(180deg);
     }
 }
 
@@ -380,27 +380,12 @@ Triangle Card
 
 @keyframes spin-3 {
     100%{
-        transform: rotate(30deg);
+        transform: rotate(150deg);
     }
 }
 
 .card.matched .triangle-3 {
     animation: spin-3 5s forwards;
-}
-
-@keyframes container-rotate {
-    100% {
-        transform: rotate(120deg) translate(5px, -15px);
-    }
-}
-
-.triangle-container {
-    height:100%;
-    width:100%;
-}
-
-.card.matched .triangle-container {
-    animation: container-rotate 5s forwards;
 }
 
 /*
